# FxDAO-SC

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Makefile  currencies_oracle.wasm  rust-toolchain.toml  test.txt
.github/workflows/: locking-pool-release.yml  vaults-contract-release.yml
contracts/governance/: Cargo.toml
contracts/governance/src/storage/: core.rs  mod.rs  proposals.rs
contracts/governance/src/tests/: mod.rs  test_proposals.rs  test_proposals_update_and_upgrade_contract.rs  test_utils.rs
contracts/locking-pool/: Cargo.toml
contracts/locking-pool/src/: contract.rs  errors.rs  lib.rs
contracts/safety-pool/src/: lib.rs
contracts/stable-liquidity-pool/src/: contract.rs  lib.rs
contracts/vaults/: Cargo.toml
contracts/vaults/src/: contract.rs  lib.rs
contracts/vaults/src/storage/: core.rs  mod.rs  vaults.rs
contracts/vaults/src/tests/: mod.rs  test_core.rs  test_currencies.rs  test_liquidation.rs  test_redeem.rs  test_transfer_debt.rs  test_utils.rs  test_utils_runtime_verification.rs  test_vaults.rs  test_vaults_indexes.rs
contracts/vaults/src/tests/both_contracts/: prop_tests_both.rs
contracts/vaults/src/utils/: indexes.rs  mod.rs  payments.rs  validations.rs  vaults.rs
governance/: Cargo.toml
governance/src/: contract.rs  errors.rs
governance/src/storage/: core.rs  proposals.rs
governance/src/tests/: mod.rs  test_proposals.rs  test_proposals_update_and_upgrade_contract.rs  test_utils.rs
governance/src/utils/: core.rs  proposals.rs
safety-pool/: Cargo.toml
safety-pool/src/: contract.rs  errors.rs  lib.rs
safety-pool/src/storage/: core.rs  deposits.rs  liquidations.rs  mod.rs
safety-pool/src/tests/: contract_updates.rs  deposits.rs  governance_token.rs  integration.rs  liquidatations.rs  liquidations.rs  mod.rs  utils.rs
safety-pool/src/utils/: core.rs  deposits.rs  liquidations.rs  mod.rs
stable-liquidity-pool/: Cargo.toml
stable-liquidity-pool/src/: contract.rs  errors.rs  lib.rs
stable-liquidity-pool/src/storage/: core.rs  deposits.rs
stable-liquidity-pool/src/tests/: mod.rs  test_core.rs  test_deposits.rs  test_locked_deposits.rs  test_runtime_verification.rs  test_swaps.rs  test_utils.rs
stable-liquidity-pool/src/utils/: core.rs  deposits.rs
vaults/: Cargo.toml  flows.md
vaults/src/: contract.rs  errors.rs  lib.rs  storage_types.rs  test.rs  utils.rs
vaults/src/storage/: core.rs  currencies.rs  mod.rs  storage_types.rs  vaults.rs
vaults/src/tests/: mod.rs  test_core.rs  test_currencies.rs  test_liquidation.rs  test_redeem.rs  test_runtime_verification.rs  test_utils.rs  test_utils_runtime_verification.rs  test_vaults.rs  test_vaults_indexes.rs  vaults.rs  vaults_indexes.rs
vaults/src/tests/both_contracts/: mod.rs  prop_tests_both.rs
vaults/src/utils/: core.rs  currencies.rs  indexes.rs  legacy_file.rs  mod.rs  payments.rs  vaults.rs
(+26 files in other folders)
