[workspace]
resolver = "2"

members = [
    "contracts/locking-pool",
    "contracts/stable-liquidity-pool",
    "contracts/vaults",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "21.5.0"
