[package]
name = "safety-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = { workspace = true }

[dependencies.num-integer]
version = "0.1.36"
default-features = false

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
