[package]
name = "stable-liquidity-pool"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
proptest = "1.0.0"

[dependencies.num-integer]
version = "0.1.45"
default-features = false

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
