[package]
name = "vaults"
version = "0.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stable-liquidity-pool = { path = "../stable-liquidity-pool", features = ["testutils"] }
proptest = "1.0.0"
